# cloud-security-posture-analyzer

./: .gitignore  LICENSE  README.md  cloud_security_report.md  pyproject.toml
.github/workflows/: ci.yml
data/: aws_inventory.json  security_groups.csv  vpc_flow_logs.csv
src/cloud_guardian/: __init__.py  analyzer.py  cli.py
src/cloud_guardian.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_analyzer.py
